tests/lexer/tinvalidintegerliteral3.nim
discard """
  errormsg: "0O5 is an invalid int literal; For octal literals use the '0o' prefix."
  file: "tinvalidintegerliteral3.nim"
  line: 7
"""

echo 0O5
